--- a/index.html
+++ b/index.html
@@ -3,39 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Links</title>
-    <link rel="stylesheet" href="link.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="logo">
-    <img src="img/logo_lungo_payoof.jpeg">
-    </div>
-    <div class="social-container">
-        <div class="social-item">
-            <a href="https://www.facebook.com/artalo.lab" target="_blank">
-                <img src="./img/fb.png" alt="Facebook">
-            </a>
+    <div id="navbar-container"></div>
+
+    <!-- Hero Section -->
+    <header class="hero">
+        <img src="img/testata-legno.png" alt="Logo Artalo">
+        <p>ARTALO è un progetto culturale di sostenibilità, creatività e ricerca sui materiali di scarto. Promuove l’idea che lo scarto, l’imperfetto, sia portatore di un messaggio etico, capace di sollecitare riflessioni, proporsi come risorsa educativa, sfuggendo così alla definizione di inutile e di rifiuto.</p>
+        <a href="about.html" class="cta-button">Scopri di più</a>
+    </header>
+
+     
+
+    <!-- Features Section -->
+    <section class="features">
+        <h2>I Nostri Punti di Forza</h2>
+        <div class="feature-grid">
+            <div class="feature">
+                <a href="esplorazione.html">
+                <h3>Esplorazione</h3>
+                <p>REMIDA è un progetto culturale sulle domande della sostenibilità. Il cuore della sua ricerca è la materia, come prodotto (e scarto) industriale, come manufatto, come soggetto da indagare o oggetto di relazione. La materia come cultura, la materia come natura.</p>
+                </a>
+            </div>
+            <div class="feature">
+                <a href="risorse.html">
+                <h3>Risorse</h3>
+                <p>I materiali di REMIDA provengono da circa 100 aziende che devolvono sfridi, materiali fallati, fondi di magazzino o eccessi di produzione destinati allo smaltimento, che il Centro recupera e in parte distribuisce a circa 300 scuole e strutture con finalità socio-culturali, in parte utilizza per i suoi progetti.</p>
+                </a>
+            </div>
+            <div class="feature">
+                <a href="eventi.html">
+                <h3>Eventi</h3>
+                <p>Remida mantiene un dialogo con la città, il mondo della scuola, delle aziende e di altri enti, organizzando eventi e collaborazioni. Per tanti anni a maggio ha organizzato il Remida Day, un evento molto partecipato che ha promosso la cultura dello scambio e dei mercati del riuso.</p>
+                </a>
+            </div>
+            <div class="feature">
+                <a href="workshop.html">
+                    <h3>Workshop</h3>
+                    <p>Il Centro è visitato ogni anno da oltre 7.000 persone tra insegnanti, artisti, studenti, amministratori e curiosi provenienti da tutto il mondo. Organizza incontri con le scuole di ogni ordine e grado, corsi di formazione ed eventi con la città.</p>
+                </a>
+            </div>
         </div>
-        <div class="social-item">
-            <a href="https://www.instagram.com/artalolab__" target="_blank">
-                <img src="img/ig.png" alt="Instagram">
-            </a>
-        </div>
-        <div class="social-item">
-            <a href="https://www.tiktok.com/@artalolab" target="_blank">
-                <img src="img/tt.png" alt="TikTok">
-            </a>
-        </div>
-        <div class="social-item">
-            <a href="https://www.youtube.com/@Artaloartalo" target="_blank">
-                <img src="img/yt.png" alt="YouTube">
-            </a>
-        </div>
-        <div class="social-item">
-            <a href="https://wa.me/3392530535" target="_blank">
-                <img src="img/wp.png" alt="WhatsApp">
-            </a>
-        </div>
-    </div>
+    </section>
+
+<div id="footer-container"></div>
 </body>
 </html>
